--- a/.tmp/public/src/app/committees/index.tpl.html
+++ b/.tmp/public/src/app/committees/index.tpl.html
@@ -1,41 +1,37 @@
-<!--if logged in-->
 <div class="imageContainerSmall">
-  <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
-  <div class="imageContainerSmallDiv container">  
-    <h1 style="text-align:left">committees</h1>
-  </div>
+    <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+    <div class="imageContainerSmallDiv container">  
+        <h1 style="text-align:left">committees</h1>
+    </div>
 </div>
 <div class="container">
-  <div ng-show="currentUser">
-    <div style="margin-left:2%;margin-right:2%;">
-      <form class="committee-input" role="form" ng-submit="createCommittee(newCommittee)">
-        <div class="form-group">
-          <input type="text" placeholder= "committee title" ng-model="newCommittee.title" class="form-control" id="postTitle">
-          <input type="text" placeholder= "committee url" ng-model="newCommittee.urlTitle" class="form-control" id="postTitle">
-          <input type="text" placeholder= "committee parent" ng-model="newCommittee.parent" class="form-control" id="postTitle">
+    <div ng-show="currentUser">
+        <div style="margin-left:2%;margin-right:2%;">
+        <form class="committee-input" role="form" ng-submit="createCommittee(newCommittee)">
+            <div class="form-group">
+                <input type="text" placeholder= "committee title" ng-model="newCommittee.title" class="form-control" id="postTitle">
+                <input type="text" placeholder= "committee url" ng-model="newCommittee.urlTitle" class="form-control" id="postTitle">
+                <input type="text" placeholder= "committee parent" ng-model="newCommittee.parent" class="form-control" id="postTitle">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
     </div>
-  </div>
-  <!--/if logged in-->
-  <div class="committee-list-parent-container" id="committeeScrolling">
-    <div class="committee-list-container">
-        <div class="committee-container" ng-repeat="committee in committees">
-          <h5 class="committees title">
-            <a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a>
-          </h5>
-          <!--<p>x members</p>-->
+    <div class="committee-list-parent-container" id="committeeScrolling">
+        <div class="committee-list-container">
+            <div class="committee-container" ng-repeat="committee in committees">
+                <h2>
+                    <a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a>
+                </h2>
+                <p><span style="color:grey">{{committee.memberCount}} members</span></p>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
-<md-divider ></md-divider>
-<br><br>
+<md-divider></md-divider>
+<div class="spacing-10"></div>
 <div ng-click="loadMore()" style="text-align:center">
-  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+    <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
 </div>
-
-<div style="height:100px;"></div>
+<div class="spacing-50"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
