--- a/assets/src/app/bills/index.tpl.html
+++ b/assets/src/app/bills/index.tpl.html
@@ -1,39 +1,39 @@
 <div class="imageContainerSmall">
-  <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
-  <div class="imageContainerSmallDiv container">  
-    <h1 style="text-align:left">bills</h1>
-  </div>
+    <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+    <div class="imageContainerSmallDiv container">  
+        <h1 style="text-align:left">bills</h1>
+    </div>
 </div>
 <div class="container">
-  <div class="dropdown sort-dropdown noselect">
-      <a class="dropdown-toggle noselect" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-          <h4 class="noselect">Sort by {{sort}}<span class="caret"></span></h4>
-      </a>
-      <ul class="dropdown-menu">
-          <li><a class="sort-a" ng-click="selectSort('createdAt DESC')"><h5>Most Recent</h5></a></li>
-          <hr class="sort-hr">
-          <li><a class="sort-a" ng-click="selectSort('voteCount DESC')"><h5>Highest Rated</h5></a></li>
-          <hr class="sort-hr">
-          <li><a class="sort-a" ng-click="selectSort('voteCount ASC')"><h5>Lowest Rated</h5></a></li>
-      </ul>
-  </div>
-	<md-card ng-repeat="bill in bills">
-      <md-card-title>
-        <md-card-title-text>
-          <h4>
-			     {{bill.voteCount}}
-            <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
-            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
-            <a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
-          </h4>
-        </md-card-title-text>
-      </md-card-title>
+    <div class="dropdown sort-dropdown noselect">
+        <a class="dropdown-toggle noselect" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <h4 class="noselect">Sort by {{sort}}<span class="caret"></span></h4>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a class="sort-a" ng-click="selectSort('createdAt DESC')"><h5>Most Recent</h5></a></li>
+            <hr class="sort-hr">
+            <li><a class="sort-a" ng-click="selectSort('voteCount DESC')"><h5>Highest Rated</h5></a></li>
+            <hr class="sort-hr">
+            <li><a class="sort-a" ng-click="selectSort('voteCount ASC')"><h5>Lowest Rated</h5></a></li>
+        </ul>
+    </div>
+    <md-card ng-repeat="bill in bills">
+        <md-card-title>
+            <md-card-title-text>
+            <h4>
+                {{bill.voteCount}}
+                <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
+                <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
+                <a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
+            </h4>
+            </md-card-title-text>
+        </md-card-title>
     </md-card>
 </div>
 <md-divider></md-divider>
-<br><br>
+<div class="spacing-10"></div>
 <div ng-click="loadMore()" style="text-align:center">
-  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+    <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
 </div>
-<div style="height:100px;"></div>
+<div class="spacing-50"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
