--- a/assets/src/app/committee/index.tpl.html
+++ b/assets/src/app/committee/index.tpl.html
@@ -1,6 +1,6 @@
-<div ui-view="home"></div>
-<div ui-view="bills"></div>
+<div ui-view="committeeHome"></div>
+<div ui-view="committeeBills"></div>
 <div ui-view="committeeCommittees"></div>
-<div ui-view="discussion"></div>
-<div ui-view="members"></div>
-<div ui-view="votes"></div>
+<div ui-view="committeeDiscussion"></div>
+<div ui-view="committeeMembers"></div>
+<div ui-view="committeeVotes"></div>
