--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -1,191 +1,75 @@
 <div ui-view="member">
-
-	<div class="">
-		<div style="height:17em;width: 100%;overflow: hidden;">
-			<img style="width: 100%;margin-top: -10%" class="profile-bgHome" src="{{member.coverUrl}}" err-src="/images/avatar.png" />
+	<div class="profile-header">
+		<div class="member-cover">
+			<img ng-src="{{member.coverUrl}}" err-src="/images/avatar.png" />
 		</div>
-		<uib-tabset class="container">
-			<uib-tab heading="Activity" active="active" style="margin-left:11em"></uib-tab>
-			<uib-tab heading="{{committees.length}} Committees"></uib-tab>
-			<uib-tab heading="{{constituents.length}} Constituents"></uib-tab>
-			<uib-tab heading="{{representatives.length}} Representatives"></uib-tab>
-			<uib-tab heading="{{voteCount}} Votes"></uib-tab>
-			<uib-tab ng-click="goToAccount()" ng-show="currentUser.id == member.id" heading="Edit Profile"></uib-tab>
-		</uib-tabset>
-		<md-divider></md-divider>
 		<div class="container">
-			<img class="avatar" src="{{member.avatarUrl}}"/>
+			<div class="pull-left">
+				<img class="avatar" ng-src="{{member.avatarUrl}}"/>
+			</div>
+			<div class="pull-right member-tab-container">
+				<ul class="member-tabs">
+					<li>
+						<a href="member/{{member.username}}">Activity</a>
+					</li>
+					<!--<li>
+						<a href="member/{{member.username}}/bills">{{committeeCount}} Bills</a>
+					</li>-->
+					<li>
+						<a href="member/{{member.username}}/committees">{{committeeCount}} Committees</a>
+					</li>
+					<li>
+						<a href="member/{{member.username}}/constituents">{{constituentCount}} Constituents</a>
+					</li>
+					<li>
+						<a href="member/{{member.username}}/representatives">{{representativeCount}} Representatives</a>
+					</li>
+					<li>
+						<a href="member/{{member.username}}/votes">{{voteCount}} Votes</a>
+					</li>
+					<li ng-show="currentUser.id != member.id">
+						<a ng-show="!isFollowing" class="btn btn-default" ng-click="selectAsRepresentative()">Elect</a>
+						<a ng-show="isFollowing" class="btn btn-default" ng-click="selectAsRepresentative()">Unelect</a>
+					</li>
+					<li ng-show="currentUser.id != member.id">
+						<a class="btn btn-default" ng-click="">Follow</a>
+					</li>
+					<li ng-show="currentUser.id == member.id">
+						<a class="btn btn-default" href="account">Edit Profile</a>
+					</li>
+				</ul>
+			</div>
 		</div>
+		<md-divider></md-divider>
 		<div class="container">
 			<div class="pull-left">
 				<h1>{{member.username}}</h1>
 				<h5 ng-show="member.title"><span style="color:grey">{{member.title}}</span></h5>
 				<h5 ng-show="member.district"><span style="color:grey">District {{member.district}}</span></h5>
 				<h5 ng-show="member.state"><span style="color:grey">{{member.state}}</span></h5>
-				<a ng-show="member.socialAccounts.facebook.profileUrl" href="{{member.socialAccounts.facebook.profileUrl}}"  target="_blank"><span class="fa fa-facebook"></span> Facebook</a>
-				<a ng-show="member.socialAccounts.google.profileUrl" href="{{member.socialAccounts.google.profileUrl}}"  target="_blank"><span class="fa fa-google"></span> Google</a>
-				<a ng-show="member.socialAccounts.twitter.profileUrl" href="{{member.socialAccounts.twitter.profileUrl}}"  target="_blank"><span class="fa fa-twitter"></span> Twitter</a>
-				<div class="spacing-10"></div>
 			</div>
 			<div class="pull-right">
-				<h5 ng-show="member.phone"><i class="fa fa-phone"></i> {{member.phone}}</h5>
-				<h5 ng-show="showFax"><i class="fa fa-fax"></i> {{member.fax}}</h5>
-				<h5 ng-show="member.email"><i class="fa fa-envelope"></i> {{member.email}}</h5>
-				<div ng-show="currentUser.id != member.id">
-					<button ng-show="!isFollowing" class="btn btn-default" ng-click="selectAsRepresentative()">elect</button>
-					<button ng-show="isFollowing" class="btn btn-default" ng-click="removeRepresentative()">unelect</button>
-					<button class="btn btn-default">follow</button>
-				</div>
-				<div class="spacing-5"></div>
-				<div style="clear:both"></div>
-				<div class="spacing-15"></div>
+				<div class="spacing-10"></div>
+				<h5 ng-show="member.phone"><span style="color:grey"><i class="fa fa-phone"></i> {{member.phone}}</span></h5>
+				<h5 ng-show="showFax"><span style="color:grey"><i class="fa fa-fax"></i> {{member.fax}}</span></h5>
+				<a ng-show="member.socialAccounts.facebook.profileUrl" href="{{member.socialAccounts.facebook.profileUrl}}"  target="_blank"><span style="color:grey"><i class="fa fa-facebook"></i> Facebook</span></a>
+				<a ng-show="member.socialAccounts.google.profileUrl" href="{{member.socialAccounts.google.profileUrl}}"  target="_blank"><span style="color:grey"><i class="fa fa-google"></i> Google</span></a>
+				<a ng-show="member.socialAccounts.twitter.profileUrl" href="{{member.socialAccounts.twitter.profileUrl}}"  target="_blank"><span style="color:grey"><i class="fa fa-twitter"></i> Twitter</span></a>
 			</div>
 			<div class="spacing-10"></div>
 		</div>
 	</div>
-
-	<uib-tabset class="container">
-		<uib-tab heading="Activity" active="active">
-			<div class="profilePost">
-				<form role="form">
-					<md-input-container class="md-block">
-			        	<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
-						<!--connect legislators-->
-						<!--<p>send as a fax? - send as mail (verified), send email (always) - send video??</p>-->
-						<div class="spacing-10"></div>
-						<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
-					</md-input-container>
-				</form>
-			</div>
-			<div class="spacing-25"></div>
-
-			<md-card ng-repeat="post in posts">
-				<md-card-title>
-					<md-card-title-text>
-					<a href="member/{{post.user.username}}">
-						<img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-						<h4>{{post.user.username}}</h4>
-					</a>
-					<p>{{post.post}}</p>
-					</md-card-title-text>
-				</md-card-title>
-			</md-card>
-
-			<md-card ng-repeat="vote in votes">
-				<md-card-title>
-					<md-card-title-text>
-						<p style="white-space: nowrap">
-							{{vote.voteString}} on behalf of {{constituents.length}} constituents about
-							<a href="/vote/{{vote.vote.id}}">{{vote.vote.title}}</a> for 
-							<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
-						</p>
-					</md-card-title-text>
-				</md-card-title>
-			</md-card>
-
-
-			<md-card ng-repeat="vote in votes">
-				<md-card-title>
-					<a href="member/{{vote.user.username}}">
-						<img style="max-width:64px" ng-src="{{vote.user.avatarUrl}}" class="md-card-image" alt="{{vote.user.username}}">
-						<h4>{{vote.user.username}}</h4>
-					</a>
-					<p>{{vote.voteString}} on behalf of {{constituents.length}} constitutent<span ng-show="constituents.length > 1">s</span></p>
-				</md-card-title>
-				<md-card-title>
-					<div style="float:right">
-						<a href="/vote/{{vote.vote.id}}">{{vote.vote.title}}</a> for 
-						<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
-					</div>
-				</md-card-title>
-			</md-card>
-
-
-
-			<div class="spacing-10"></div>
-			<div ng-show="votes.legnth > 0 && votes.legnth != voteCount" ng-click="loadMore()" style="text-align:center">
-			  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
-			</div>
-		</uib-tab>
-		<uib-tab heading="{{committees.length}} Committees">
-			<div class="container">
-				<md-card ng-repeat="committee in committees" class="">
-					<md-card-title>
-						<md-card-title-text>
-							<a href="/committee/{{committee.committee.urlTitle}}/"><h3>{{committee.committee.title}}</h3></a>
-							<h5>{{committee.title}}</h5>
-							<!--number of reps?-->
-						</md-card-title-text>
-					<md-card-title>
-				</md-card>
-			</div>
-		</uib-tab>
-		<uib-tab heading="{{constituents.length}} Constituents">
-			<div class="col-lg-4 col-sm-6" ng-repeat="constituent in constituents">
-				<div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
-					<div class="image" style="background-image: url('{{constituent.constituent.coverUrl}}')">
-						<img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{constituent.constituent.avatarUrl}}" err-src="/images/avatar.png">
-					</div>
-					<div class="info">
-						<h2 class="name"><a href="member/{{constituent.constituent.username}}">{{constituent.constituent.username}}</a></h2>
-						<h3 class="position"><a href="member/{{constituent.constituent.username}}">{{constituent.constituent.title}}</a></h3>
-						<p>{{constituent.constituent.state}}</p>
-					</div>
-					<div class="social">
-						<a ng-show="constituent.constituent.socialAccounts.facebook.profileUrl" href="{{constituent.constituent.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
-						<a ng-show="constituent.constituent.socialAccounts.twitter.profileUrl" href="{{constituent.constituent.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
-						<a ng-show="constituent.constituent.socialAccounts.google.profileUrl" href="{{constituent.constituent.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
-					</div>
-				</div>
-			</div>
-		</uib-tab>
-		<uib-tab heading="{{representatives.length}} Representatives">
-			<div class="col-lg-4 col-sm-6" ng-repeat="representative in representatives">
-				<div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
-					<div class="image" style="background-image: url('{{representative.representative.coverUrl}}')">
-						<img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{representative.representative.avatarUrl}}" err-src="/images/avatar.png">
-					</div>
-					<div class="info">
-						<h2 class="name"><a href="member/{{representative.representative.username}}">{{representative.representative.username}}</a></h2>
-						<h3 class="position"><a href="member/{{representative.representative.username}}">{{representative.representative.title}}</a></h3>
-						<p>{{representative.representative.state}}</p>
-					</div>
-					<div class="social">
-						<a ng-show="representative.representative.socialAccounts.facebook.profileUrl" href="{{representative.representative.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
-						<a ng-show="representative.representative.socialAccounts.twitter.profileUrl" href="{{representative.representative.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
-						<a ng-show="representative.representative.socialAccounts.google.profileUrl" href="{{representative.representative.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
-					</div>
-				</div>
-			</div>
-		</uib-tab>
-		<!--<uib-tab heading="Followers">
-		</uib-tab>
-		<uib-tab heading="Following">
-		</uib-tab>-->
-		<uib-tab heading="{{voteCount}} Votes">
-			<md-card ng-repeat="vote in votes">
-				<md-card-title>
-					<md-card-title-text>
-						<p style="white-space: nowrap">{{vote.voteString}} on behalf of {{constituents.length}} constituents</p>
-						<a href="/vote/{{vote.vote.id}}">{{vote.vote.title}}</a>
-						<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
-					</md-card-title-text>
-				</md-card-title>
-			</md-card>
-			<div class="spacing-10"></div>
-			<div ng-show="votes.legnth > 0 && votes.legnth != voteCount" ng-click="loadMore()" style="text-align:center">
-			  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
-			</div>
-		</uib-tab>
-		<!--<uib-tab heading="Follow">
-		</uib-tab>-->
-		<!--<uib-tab heading="Select as a representative">
-		</uib-tab>-->
-		<uib-tab ng-click="goToAccount()" ng-show="currentUser.id == member.id" heading="Edit Profile">
-		</uib-tab>
-	</uib-tabset>
-	
+	<div class="spacing-15"></div>
+	<md-divider></md-divider>
+	<div class="spacing-15"></div>
+	<div class="profile-container">
+		<div ui-view="memberActivity"></div>
+		<div ui-view="memberBills"></div>
+		<div ui-view="memberCommittees"></div>
+		<div ui-view="memberConstituents"></div>
+		<div ui-view="memberRepresentatives"></div>
+		<div ui-view="memberVotes"></div>
+	</div>
 	<div class="spacing-50"></div>
 	<div ng-include="'footer/index.tpl.html'"></div>
-
 </div>
