--- a/.tmp/public/src/app/search/index.tpl.html
+++ b/.tmp/public/src/app/search/index.tpl.html
@@ -145,7 +145,7 @@
 					</md-card>
 			        <br><br>
 			        <div ng-click="loadMoreVotes()" style="text-align:center">
-			        	<button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
+			        	<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
 			        </div>
     			</uib-tab>
 			</uib-tabset>
