--- a/.tmp/public/src/app/committee/index.tpl.html
+++ b/.tmp/public/src/app/committee/index.tpl.html
@@ -1,6 +1,34 @@
-<div ui-view="committeeHome"></div>
-<div ui-view="committeeBills"></div>
-<div ui-view="committeeCommittees"></div>
-<div ui-view="committeeDiscussion"></div>
-<div ui-view="committeeMembers"></div>
-<div ui-view="committeeVotes"></div>
+<div class="imageContainerSmall">
+    <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+    <div class="imageContainerSmallDiv container">  
+        <h1 style="text-align:left">{{committee.title}}</h1>
+    </div>
+</div>
+
+<div class="member-tab-container container">
+	<ul style="padding:0px;" class="member-tabs">
+		<li><a href="/committee/{{committee.urlTitle}}">Activity</a></li>
+		<li><a href="/committee/{{committee.urlTitle}}/bills">{{billCount}} Bills</a></li>
+		<li><a href="/committee/{{committee.urlTitle}}/committees">Committees</a></li>
+		<li><a href="/committee/{{committee.urlTitle}}/discussion">Discussion</a></li>
+		<li><a href="/committee/{{committee.urlTitle}}/members">{{memberCount}} Members</a></li>
+		<li><a href="/committee/{{committee.urlTitle}}/votes">{{voteCount}} Votes</a></li>
+		<li ng-show="currentUser">
+			<a class="btn btn-default" ng-click="toggleEditCommittee()">Edit</a>
+		</li>
+	</ul>
+</div>
+<md-divider></md-divider>
+
+<div class="container" ng-show="editCommitteeToggle"><p>edit committee form</p></div>
+
+<div class="committee-container">
+	<div ui-view="committeeActivity"></div>
+	<div ui-view="committeeBills"></div>
+	<div ui-view="committeeCommittees"></div>
+	<div ui-view="committeeDiscussion"></div>
+	<div ui-view="committeeMembers"></div>
+	<div ui-view="committeeVotes"></div>
+</div>
+
+<div ng-include="'footer/index.tpl.html'"></div>
