--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <img class="avatar" style="margin-top:0em" ng-src="{{currentUser.avatarUrl}}"/>
+        <img style="position:relative;top:0em" class="avatar" style="margin-top:0em" ng-src="{{currentUser.avatarUrl}}"/>
         <h2><a href="/member/{{currentUser.username}}"><b>{{currentUser.username}}</a></b></h2>
         <div class="spacing-5"></div>
         <h5>Bills - {{committees.length}}</h5>
