--- a/.tmp/public/src/app/nav/index.tpl.html
+++ b/.tmp/public/src/app/nav/index.tpl.html
@@ -1,14 +1,14 @@
 <style>
-//.navbar-inverse{background-color:rgba(36,36,46,1);}
-.navbar-inverse{background-color:rgba(255,255,255,1);border-color:#e1e1e1;}
-.navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-text{color:#424242}
-.navbar-inverse .navbar-nav > li > a:focus{color:#424242}
-.navbar-inverse .navbar-brand{color:#717171}
-.navbar-inverse .navbar-brand:focus{color:#424242}
-.navbar-inverse .navbar-toggle {border-color: #424242;}
-.navbar-inverse .navbar-toggle .icon-bar{background-color:#424242;}
-.navbar-inverse .navbar-toggle:hover .icon-bar{background-color:#fff;}
-md-progress-linear .md-container {background-color: #e1e1e1!important;}
+    .navbar-inverse{background-color:rgba(255,255,255,1);border-color:#e1e1e1;}
+    .navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-text{color:#424242}
+    .navbar-inverse .navbar-nav > li > a:focus{color:#424242}
+    .navbar-inverse .navbar-brand{color:#717171}
+    .navbar-inverse .navbar-brand:focus{color:#424242}
+    .navbar-inverse .navbar-toggle {border-color: #424242;}
+    .navbar-inverse .navbar-toggle .icon-bar{background-color:#424242;}
+    .navbar-inverse .navbar-toggle:hover .icon-bar{background-color:#fff;}
+    .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {color:#717171; background-color:#e1e1e1;}
+    md-progress-linear .md-container {background-color: #e1e1e1!important;}
 </style>
 <div ng-controller="NavCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
