--- a/assets/src/app/committee/templates/activity.tpl.html
+++ b/assets/src/app/committee/templates/activity.tpl.html
@@ -1,3 +1,4 @@
+
 <div class="container" style="min-height:100vh">
     <div class="profilePost">
         <form role="form">
@@ -15,8 +16,23 @@
                     <p>{{post.user.username}}</p>
                 </a>
                 <p>{{post.post}}</p>
-                <p>like, comment</p>
             </md-card-title-text>
         </md-card-title>
     </md-card>
+    <div class="billContainer" ng-repeat="bill in bills | orderBy:'-voteCount'">
+        <div class="bill-item">
+            <div>
+                <h4>
+                    {{bill.voteCount}}
+                    <button class="btn btn-default" ng-click="createVote(1, bill)"><i class="fa fa-caret-up"></i></button>
+                    <button class="btn btn-default" ng-click="createVote(-1, bill)"><i class="fa fa-caret-down"></i></button>
+                    <a href="bill/{{bill._id}}/{{bill.urlTitle}}">{{bill.title}}</a>
+                </h4>
+            </div>
+            <div>
+                <a href="bill/{{bill._id}}/{{bill.title}}">{{bill.comments.length}} comments, {{bill.votes.length}} votes</a>
+            </div>
+        </div>
+        <md-divider></md-divider>
+    </div>
 </div>
