--- a/assets/src/app/committee/templates/members.tpl.html
+++ b/assets/src/app/committee/templates/members.tpl.html
@@ -1,44 +1,19 @@
-<div id="sidebar-wrapper">
-  <ul class="sidebar-nav">
-    <br>
-    <li><a style="font-weight:bold" href="committee/{{committee.urlTitle}}">{{committee.title}}</a></li>
-    <hr>
-    <!--<li><a href="#">bylaws</a></li>-->
-    <li><a href="committee/{{committee.urlTitle}}/bills">bills</a></li>
-    <li><a href="committee/{{committee.urlTitle}}/committees">committees</a></li>
-    <li><a href="committee/{{committee.urlTitle}}/discussion">discussion</a></li>
-    <!--<li><a href="#">elections</a></li>-->
-    <li style="color: #fff;background: #4b5359"><a style="color: #2AB996" href="committee/{{committee.urlTitle}}/members">members</a></li>
-    <li><a href="committee/{{committee.urlTitle}}/votes">votes</a></li>
-  </ul>
-</div>
-
-<div id="main-container">
-  <h2>{{members.length}} members</h2>
-  <md-divider ></md-divider>
-  <div ng-show="currentUser">
-    <button class="btn btn-default" ng-click="createMember()">Join Committee</button>
-  </div>
-  <div class="container">
+<div class="container" style="min-height:100vh">
     <div class="col-lg-4 col-sm-6" ng-repeat="member in members">
-      <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
-        <div class="image" style="background-image: url('{{member.user.coverUrl}}')">
-          <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" class="avatar" src="{{member.user.avatarUrl}}" err-src="/images/avatar.png">
+        <div class="member-card">
+            <div class="image" style="background-image: url('{{member.user.coverUrl}}')">
+                <img ng-src="{{member.user.avatarUrl}}" err-src="/images/avatar.png">
+            </div>
+            <div class="info">
+                <h2 class="name"><a href="member/{{member.user.username}}">{{member.user.username}}</a></h2>
+                <p>{{member.user.title}}</p>
+                <p>{{member.user.state}}</p>
+            </div>
+            <div class="social">
+                <a ng-show="member.user.socialAccounts.facebook.profileUrl" href="{{member.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+                <a ng-show="member.user.socialAccounts.twitter.profileUrl" href="{{member.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+                <a ng-show="member.user.socialAccounts.google.profileUrl" href="{{member.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+            </div>
         </div>
-        <div class="info">
-          <h2 class="name"><a href="member/{{member.user.username}}">{{member.user.username}}</a></h2>
-          <h3 class="position" style="text-transform:capitalize"><a href="member/{{member.user.username}}">{{member.title}}</a></h3>
-          <p>{{member.user.title}}</p>
-          <!--<button class="btn btn-default">follow</button>-->
-        </div>
-        <div class="social">
-          <a ng-show="member.user.socialAccounts.facebook.profileUrl" href="{{member.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
-          <a ng-show="member.user.socialAccounts.twitter.profileUrl" href="{{member.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
-          <a ng-show="member.user.socialAccounts.google.profileUrl" href="{{member.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
-        </div>
-      </div>
     </div>
-  </div>  
-</div>
-<div ng-include="'footer/index.tpl.html'"></div>
-
+</div> 
