--- a/assets/src/app/committee/templates/committees.tpl.html
+++ b/assets/src/app/committee/templates/committees.tpl.html
@@ -1,8 +1,13 @@
 <div class="container" style="min-height:100vh">
     <div class="committee-title">
-        <a href="committee/{{committee.parent.urlTitle}}">{{committee.parent.title}}</a>
+        <h2><a href="committee/{{committee.parent.urlTitle}}">{{committee.parent.title}}</a></h2>
     </div>
-    <div ng-repeat="committee in committees">
-        <a href="committee/{{committee.urlTitle}}">{{committee.title}}</a>
-    </div>
+     <md-card ng-repeat="committee in committees">
+        <md-card-title>
+            <md-card-title-text>
+                <a href="/committee/{{committee.urlTitle}}/"><h3>{{committee.title}}</h3></a>
+                <h5>{{committee.memberCount}} members</h5>
+            </md-card-title-text>
+        <md-card-title>
+    </md-card>
 </div>
