--- a/assets/src/app/committee/templates/members.tpl.html
+++ b/assets/src/app/committee/templates/members.tpl.html
@@ -16,4 +16,5 @@
             </div>
         </div>
     </div>
-</div> 
+    <button ng-show="members.length != memberCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+</div>
