--- a/assets/src/app/member/templates/activity.tpl.html
+++ b/assets/src/app/member/templates/activity.tpl.html
@@ -10,6 +10,7 @@
 		</form>
 	</div>
 	<div class="spacing-25"></div>
+	<!--gotta make this unified with universally styled cards-->
 	<md-card ng-repeat="post in posts">
 		<md-card-title>
 			<md-card-title-text>
@@ -17,7 +18,6 @@
 				<img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
 				<h4>{{post.user.username}}</h4>
 			</a>
-			<div>{{post.post}}</div>
 			<p>{{post.post}}</p>
 			</md-card-title-text>
 		</md-card-title>
@@ -42,7 +42,10 @@
 		</md-card-title>
 	</md-card>
 	<div class="spacing-10"></div>
-	<div ng-show="votes.legnth > 0 && votes.legnth != voteCount" ng-click="loadMore()" style="text-align:center">
+	<div ng-show="votes.legnth != voteCount" ng-click="loadMore()" style="text-align:center">
+		<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
+	</div>
+	<div ng-show="posts.legnth != postCount" ng-click="loadMore()" style="text-align:center">
 		<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
 	</div>
 </div>
