--- a/assets/src/app/member/templates/bills.tpl.html
+++ b/assets/src/app/member/templates/bills.tpl.html
@@ -2,4 +2,8 @@
     <md-card ng-repeat="bill in bills">
     	{{bill.title}}
     </md-card>
+    <div class="spacing-10"></div>
+	<div ng-show="bills.legnth != billCount" ng-click="loadMore()" style="text-align:center">
+		<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+	</div>
 </div>
