--- a/assets/src/app/member/templates/committees.tpl.html
+++ b/assets/src/app/member/templates/committees.tpl.html
@@ -7,4 +7,8 @@
             </md-card-title-text>
         <md-card-title>
     </md-card>
+    <div class="spacing-10"></div>
+	<div ng-show="committees.legnth != committeeCount" ng-click="loadMore()" style="text-align:center">
+		<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+	</div>
 </div>
