--- a/assets/src/app/member/templates/constituents.tpl.html
+++ b/assets/src/app/member/templates/constituents.tpl.html
@@ -16,4 +16,8 @@
 			</div>
 		</div>
 	</div>
+	<div class="spacing-10"></div>
+	<div ng-show="constituents.legnth != constituentCount" ng-click="loadMore()" style="text-align:center">
+		<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+	</div>
 </div>
