--- a/assets/src/app/member/templates/votes.tpl.html
+++ b/assets/src/app/member/templates/votes.tpl.html
@@ -9,7 +9,7 @@
 		</md-card-title>
 	</md-card>
 	<div class="spacing-10"></div>
-	<div ng-show="votes.legnth > 0 && votes.legnth != voteCount" ng-click="loadMore()" style="text-align:center">
+	<div ng-show="votes.legnth != voteCount" ng-click="loadMore()" style="text-align:center">
 		<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
 	</div>
 </div>
