--- a/.tmp/public/src/app/member/index.tpl.html
+++ b/.tmp/public/src/app/member/index.tpl.html
@@ -29,7 +29,7 @@
 					</li>
 					<li ng-show="currentUser.id != member.id">
 						<a ng-show="!isFollowing" class="btn btn-default" ng-click="selectAsRepresentative()">Elect</a>
-						<a ng-show="isFollowing" class="btn btn-default" ng-click="selectAsRepresentative()">Unelect</a>
+						<a ng-show="isFollowing" class="btn btn-default" ng-click="removeRepresentative()">Unelect</a>
 					</li>
 					<li ng-show="currentUser.id != member.id">
 						<a class="btn btn-default" ng-click="">Follow</a>
@@ -44,18 +44,18 @@
 		<div class="container">
 			<div class="pull-left">
 				<h2>{{member.firstName}} {{member.lastName}}</h2>
-				<h5><span style="color:grey">@{{member.username}}</span></h5>
-				<h5 ng-show="member.title"><span style="color:grey">{{member.title}}</span></h5>
-				<h5 ng-show="member.district"><span style="color:grey">District {{member.district}}</span></h5>
-				<h5 ng-show="member.state"><span style="color:grey">{{member.state}}</span></h5>
+				<h5><span class="grey">@{{member.username}}</span></h5>
+				<h5 ng-show="member.title"><span class="grey">{{member.title}}</span></h5>
+				<h5 ng-show="member.district"><span class="grey">District {{member.district}}</span></h5>
+				<h5 ng-show="member.state"><span class="grey">{{member.state}}</span></h5>
 			</div>
 			<div class="pull-right">
 				<div class="spacing-10"></div>
-				<h5 ng-show="member.phone"><span style="color:grey"><i class="fa fa-phone"></i> {{member.phone}}</span></h5>
+				<h5 ng-show="member.phone"><a style="color:grey" href="tel:{{member.phone}}"><i class="fa fa-phone"></i> {{member.phone}}</a></h5>
 				<h5 ng-show="showFax"><span style="color:grey"><i class="fa fa-fax"></i> {{member.fax}}</span></h5>
-				<a ng-show="member.socialAccounts.facebook.profileUrl" href="{{member.socialAccounts.facebook.profileUrl}}"  target="_blank"><span style="color:grey"><i class="fa fa-facebook"></i> Facebook</span></a>
-				<a ng-show="member.socialAccounts.google.profileUrl" href="{{member.socialAccounts.google.profileUrl}}"  target="_blank"><span style="color:grey"><i class="fa fa-google"></i> Google</span></a>
-				<a ng-show="member.socialAccounts.twitter.profileUrl" href="{{member.socialAccounts.twitter.profileUrl}}"  target="_blank"><span style="color:grey"><i class="fa fa-twitter"></i> Twitter</span></a>
+				<a ng-show="member.socialAccounts.facebook.profileUrl" href="{{member.socialAccounts.facebook.profileUrl}}"  target="_blank"><span class="grey facebook-icon"><i class="fa fa-facebook"></i> Facebook</span></a>
+				<a ng-show="member.socialAccounts.twitter.profileUrl" href="{{member.socialAccounts.twitter.profileUrl}}"  target="_blank"><span class="grey twitter-icon"><i class="fa fa-twitter"></i> Twitter</span></a>
+				<a ng-show="member.socialAccounts.google.profileUrl" href="{{member.socialAccounts.google.profileUrl}}"  target="_blank"><span class="grey google-icon"><i class="fa fa-google"></i> Google</span></a>
 			</div>
 			<div class="spacing-10"></div>
 		</div>
