--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -32,7 +32,7 @@
 				<input ng-model="user.address" required name="Address" type="text">
 			</md-input-container>
 		</div>
-		<button type="submit" class="btn btn-primary">Save</button>
+		<button type="submit" class="btn btn-default">Save</button>
 	</form>
 
 	<br><br>
@@ -73,7 +73,7 @@
 	<md-input-container class="md-block">
 		<label class="modal-label">Address</label>
 		<input ng-model="user.address" required name="address" type="text">
-		<button type="submit" class="btn btn-primary">Save</button>
+		<button type="submit" class="btn btn-default">Save</button>
 	</md-input-container>
 	<!--<p>ssn</p>-->
 
@@ -83,35 +83,35 @@
 		<img style="height:64px;" src="{{user.socialAccounts.facebook.profilePic}}">
 		<span>{{user.socialAccounts.facebook.displayName}}</span>
 	</a>
-	<a ng-show="!facebookPassport" class="btn btn-primary" href="/auth/facebook">connect facebook</a>
-	<a ng-show="facebookPassport" class="btn btn-primary" ng-click="removePassport('facebook')">disconnect facebook</a>
+	<a ng-show="!facebookPassport" class="btn btn-default" href="/auth/facebook">connect facebook</a>
+	<a ng-show="facebookPassport" class="btn btn-default" ng-click="removePassport('facebook')">disconnect facebook</a>
 
 	<br><br>
-	<a ng-show="!twitterPassport"class="btn btn-primary" href="/auth/twitter">connect twitter</a>
+	<a ng-show="!twitterPassport"class="btn btn-default" href="/auth/twitter">connect twitter</a>
 	<a href="{{user.socialAccounts.twitter.profileUrl}}">
 		<img style="height:64px;" src="{{user.socialAccounts.twitter.profilePic}}">
 		<span>{{user.socialAccounts.twitter.handle}}</span>
 	</a>
-	<a ng-show="!twitterPassport"class="btn btn-primary" href="/auth/twitter">connect twitter</a>
-	<a ng-show="twitterPassport"class="btn btn-primary" ng-click="removePassport('twitter')">disconnect twitter</a>
+	<a ng-show="!twitterPassport"class="btn btn-default" href="/auth/twitter">connect twitter</a>
+	<a ng-show="twitterPassport"class="btn btn-default" ng-click="removePassport('twitter')">disconnect twitter</a>
 
 	<br><br>
 	<a href="{{user.socialAccounts.google.profileUrl}}">
 		<img style="height:64px;" src="{{user.socialAccounts.google.profilePic}}">
 		<span>{{user.socialAccounts.google.displayName}}</span>
 	</a>
-	<a ng-show="!googlePassport"class="btn btn-primary" href="/auth/google">connect google</a>
-	<a ng-show="googlePassport"class="btn btn-primary" ng-click="removePassport('google')">disconnect google</a>
+	<a ng-show="!googlePassport"class="btn btn-default" href="/auth/google">connect google</a>
+	<a ng-show="googlePassport"class="btn btn-default" ng-click="removePassport('google')">disconnect google</a>
 
 	<br><br>
-	<!--<a class="btn btn-primary" href="/auth/btc">connect btc wallet</a>-->
+	<!--<a class="btn btn-default" href="/auth/btc">connect btc wallet</a>-->
 
 
 	<h3>Settings</h3>
 	<md-divider></md-divider><br>
 	<h4>email settings</h4>
-	<a ng-show="localPassport.length==0" class="btn btn-primary" href="/auth/facebook">connect email</a>
-	<a ng-show="localPassport.length>0" class="btn btn-primary">reset password</a>
+	<a ng-show="localPassport.length==0" class="btn btn-default" href="/auth/facebook">connect email</a>
+	<a ng-show="localPassport.length>0" class="btn btn-default">reset password</a>
 
 	<h4>contact settings</h4>
 	<p>send email</p>
