--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -176,7 +176,13 @@ md-progress-linear .md-container {
 }
 
 md-progress-linear.md-default-theme .md-bar, md-progress-linear .md-bar {
- background-color: #2ab996!important;
+  background-color: #2ab996!important;
+}
+
+md-input-container.md-default-theme .md-input, md-input-container .md-input {
+  color:black;
+  font-weight:200;
+  font-size:16px;
 }
 
 .member-card{
@@ -259,42 +265,56 @@ md-progress-linear.md-default-theme .md-bar, md-progress-linear .md-bar {
   color:white!important;
   background-color:#2ab996;
 }
+
 .downVote:hover{
   color:white!important;
   background-color:red;
 }
+
 .upVote:hover i, 
 .downVote:hover i {
   color:white;
 }
+
 .upVoted i, 
 .downVoted i {
   color:white;
 }
+
 .upVoted{
   color:white!important;
   background-color:#2ab996;
 }
+
 .downVoted{
   color:white!important;
   background-color:red;
 }
+
 .upVoted:focus{
   color:white!important;
   background-color:#2ab996;
 }
+
 .downVoted:focus{
   color:white!important;
   background-color:red;
 }
+
 .social {
   height: 40px;
   background: #DAE0DE;
   text-align: center;
   padding-top: 12px;
-
 }
+
 .social a i{font-size:20px; color:#636363;}
+
+.grey{color:grey;}
+
+.facebook-icon:hover{color:#3b5998}
+.twitter-icon:hover{color:#55acee}
+.google-icon:hover{color:#dd4b39}
 
 .flex {
     display: flex;
@@ -329,133 +349,6 @@ md-progress-linear.md-default-theme .md-bar, md-progress-linear .md-bar {
   margin-left: auto;
   text-align: center;
   font-family: 'Quicksand', sans-serif;
-}
-
-/* effect 12 */
-.hover-info {
-  color: white;
-  font-size: 20px;
-  font-family: 'Quicksand', sans-serif;
-  padding: 2%;
-  visibility: hidden;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.hovereffect {
-  width: 100%;
-  height: 100%;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
-  background: #2ab996;
-}
-
-.hovereffect .overlay {
-  font-family: 'Quicksand', sans-serif;
-  font-weight: 600;
-  font-size: 18px;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  padding-left: 30px;
-  padding-right: 30px;
-  margin-top: -23px;
-}
-
-.hovereffect img {
-  display: block;
-  position: relative;
-  max-width: none;
-  width: calc(100% + 20px);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(-10px,0,0);
-  transform: translate3d(-10px,0,0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.hovereffect:hover img {
-  opacity: 0.2;
-  filter: alpha(opacity=40);
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}
-
-.hovereffect h2 {
-  text-transform: uppercase;
-  color: #fff;
-  text-align: center;
-  position: relative;
-  font-size: 17px;
-  overflow: hidden;
-  padding: 0.5em 0;
-  background-color: transparent;
-}
-
-.hovereffect:hover .hover-info {
-    visibility: visible;
-}
-
-.hovereffect h2:after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background: #fff;
-  content: '';
-  -webkit-transition: -webkit-transform 0.35s;
-  transition: transform 0.35s;
-  -webkit-transform: translate3d(-100.5%,0,0);
-  transform: translate3d(-100.5%,0,0);
-}
-
-.hovereffect:hover h2:after {
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}
-
-.hovereffect a, .hovereffect p {
-  color: #FFF;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(100%,0,0);
-  transform: translate3d(100%,0,0);
-}
-
-.hovereffect:hover a, .hovereffect:hover p {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}
-
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 568px)
-{
-  .hovereffect a, .hovereffect p {
-    opacity: 1;
-    -webkit-transform: translate3d(0,0,0);
-    transform: translate3d(0,0,0);
-    font-family: 'Quicksand', sans-serif;
-    font-size: 15px;
-    padding-top: 20px;
-    text-decoration: underline;
-  }  
-  .black {
-    background-color: #000 !important;
-    opacity: .7 !important;
-  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -493,9 +386,10 @@ md-progress-linear.md-default-theme .md-bar, md-progress-linear .md-bar {
   box-shadow: none;
 }
 .nav input:focus {
-  -webkit-box-shadow: inset 0px 0px 5px 2px rgba(42,185,150,0.5);
-  -moz-box-shadow: inset 0px 0px 5px 2px rgba(42,185,150,0.5);
-  box-shadow: inset 0px 0px 5px 2px rgba(42,185,150,0.5);
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+  border-radius:2px;
+  border:rgb(204, 204, 204) 2px solid
 }
 .navbar.center .navbar-inner {
     text-align: center;
