--- a/assets/src/app/home/templates/intro.tpl.html
+++ b/assets/src/app/home/templates/intro.tpl.html
@@ -108,9 +108,9 @@
                         <p>{{user.state}}</p>
                     </div>
                     <div class="social">
-                        <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a ng-show="user.socialAccounts.twitter.profileUrl" href="{{user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
-                        <a ng-show="user.socialAccounts.google.profileUrl" href="{{user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+                        <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook facebook-icon"></i></a>
+                        <a ng-show="user.socialAccounts.twitter.profileUrl" href="{{user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter twitter-icon"></i></a>
+                        <a ng-show="user.socialAccounts.google.profileUrl" href="{{user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google google-icon"></i></a>
                     </div>
                 </div>
             </div>
